2010-08-01
 - minor fixes
 - drawing of modput connections looks nicer now
 - Model.cpp::insertConnection fixed bug where a module output could be connected to the same module's input
 - adding a connection twice is not possible anymore as there is now a prevention check, see Model.cpp
 - Model.cpp::insertConnection is now complete! *yepee*
2010-07-25
 - connections are now drawn, they are properly added to the graph as well!
   see also screenshots/interface3.png
 - finally implemented Mode.cpp:insertConnection(..)
   - DataConnection.cpp/.h and DataPort.cpp/.h still need to be fixed (not done yet)
   - Connection.cpp/.h need to be fixed as well (not done yet)
2010-06-14
 - added some code to finally insert connections, all that is missing is:
  - implementation of Model::insertConnection(...)
  - formal checks for correctness of the to be inserted connection
  - fix Connection class, which does the drawing of the connection
  - probably changes in the backend: DataConnection

2010-05-03
 - added a new hierarchy layer to the Model:
   rootNode - module - port - connection 
     istead of
   rootNode - module - connection 
   
   - Q: could it be easier to have an abstraction like this:
   I) root-module-port-connection compared to VS
  II) root-module-connection (with transparent ports?)
  A: an output port can have multiple output lines
     an input port can only have one ingoing connection

     + it might be easier to implement it the I) way since one does not need the complicated transpartent
       port checks
     + if ports would be QModelIndex'es it would be easy to find the parent
       which is good since the parent "could" need to validate the connection request
       (currently this is done by the connection, which is bad)
     CURRENT STATUS OF MIGRATION:
      - modules appear and input ports are there
      - modputs/outputs are not done yet
      - the concept, mentioned above, now works. however it's not complete since there is a issue: