@@ -31,14 +31,17 @@ Document::Document() {
     connect(scene, SIGNAL(CreateModuleSignal(QString,QPoint)),
             this, SLOT(CreateModuleSlot(QString,QPoint)));
 
-    model->insertModule("NoiseGen::Billow", QPoint(-200,0));
-    model->insertModule("NoiseGen::Perlin", QPoint(-200,200));
-    model->insertModule("NoiseGen::Perlin", QPoint( 0,350));
-    model->insertModule("Utils::NoiseMap" , QPoint( 350,50));
-    model->insertModule("Selector::Selector", QPoint(100,100));
+    QModelIndex m1 = model->insertModule("NoiseGen::Billow",   QPoint(-200,0));
+    QModelIndex m2 = model->insertModule("NoiseGen::Perlin",   QPoint(-200,200));
+    QModelIndex m3 = model->insertModule("NoiseGen::Perlin",   QPoint( 0,350));
+    QModelIndex m4 = model->insertModule("Utils::NoiseMap" ,   QPoint( 350,50));
+    QModelIndex m5 = model->insertModule("Selector::Selector", QPoint(100,100));
     
-//     QModelIndex port1, port2;
-//     model->insertConnection(port1, port2);
+    QModelIndex m1_port1 = m1.child(model->rowCount(m1)-1,0);
+    QModelIndex m4_port1 = m4.child(model->rowCount(m4)-1,0);
+
+    if (m1_port1.isValid() && m4_port1.isValid())
+      model->insertConnection(m1_port1, m4_port1);
 
 //   scene->addLine(-500,-500,-500,-501);
 //   scene->addLine(500,500,500,501);
