@@ -90,8 +90,8 @@ class Model : public QAbstractItemModel {
 //     bool removeItems( QList<QPersistentModelIndex> itemList );
     /*! this is the public interface, there is an private one for internal use as well!
     ** this inserts a module of type 'QString type' at position pos, pos is importatnt for the QGraphicsScene*/
-    bool insertModule(QString type, QPoint pos=QPoint());
-    bool insertConnection(QPersistentModelIndex a, QPersistentModelIndex b);
+    QModelIndex insertModule(QString type, QPoint pos=QPoint());
+    QModelIndex insertConnection(QPersistentModelIndex a, QPersistentModelIndex b);
     
     QModelIndex dst(QPersistentModelIndex item);
   private:
